--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile ('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
+        exclude module: 'support-v4'
+    }
 }
