--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.zbaohuang.xyh"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -22,6 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
+    compile('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
+        exclude module: 'support-v4'
+    }
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
@@ -33,7 +36,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile ('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
-        exclude module: 'support-v4'
-    }
+    compile 'com.marshalchen.ultimaterecyclerview:library:0.4.0'
+    compile 'info.hoang8f:android-segmented:1.0.6'
 }
